@@ -1,13 +1,14 @@
-# last modified 23 Feb 2009 by M. Friendly
+# last modified 3 Mar 2010 by M. Friendly
 import(vcd)
 export(
 	expand.dft,expand.table,collapse.table,
-	mosaic.glm,
+	mosaic.glm, sieve.glm, assoc.glm,
 	GKgamma,print.GKgamma,
 	print.Kappa)
 
 S3method(mosaic, glm)
+S3method(sieve, glm)
+S3method(assoc, glm)
 S3method(print, GKgamma)
-
-S3method("print", "Kappa")
+S3method(print, Kappa)
 
